--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 theme: jekyll-theme-leap-day
 show_downloads: true
+github:
+  zip_url: https://github.com/heschy/Stargate-Generator/zipball/main
+  tar_url: https://github.com/heschy/Stargate-Generator/tarball/main
+
