--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: Request a new Feature.
 title: "I want a <Paste Feature Name here> in this program."
-labels: ["enhanchement"]
+labels: ["enhancement"]
 assignees:
   - heschy
 body:
